--- a/WinSound.xaml
+++ b/WinSound.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WinSounds"
         mc:Ignorable="d"
-        Title="WinSound" Height="273" Width="426" Loaded="Window_Loaded" Closing="Window_Closing" Icon="/WinSounds.png">
+        Title="WinSound" Height="273" Width="426" Loaded="Window_Loaded" Closing="Window_Closing" Icon="/WinSounds.png" Topmost="True">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="89*"/>
