--- a/WinSound.xaml
+++ b/WinSound.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WinSounds"
         mc:Ignorable="d"
-        Title="WinSound" Height="300
+        Title="WinSound" Height="330
         " Width="545" Loaded="Window_Loaded" Closing="Window_Closing" Icon="/WinSounds.png" Topmost="True">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -25,12 +25,12 @@
         <CheckBox x:Name="UI_Mood_Letter" Content="TYPING LETTER" Height="17" VerticalAlignment="Top" HorizontalAlignment="Left" Width="130" Margin="10,136,0,0" MinWidth="100" IsChecked="True" Checked="UI_Mood_Letter_Checked" Unchecked="UI_Mood_Letter_Checked" Grid.Column="1"/>
         <CheckBox x:Name="UI_Mood_Enter" Content="TYPING ENTER" Height="17" VerticalAlignment="Top" HorizontalAlignment="Left" Width="130" Margin="10,114,0,0" MinWidth="100" IsChecked="True" Checked="UI_Mood_Enter_Checked" Unchecked="UI_Mood_Enter_Checked" Grid.Column="1"/>
         <Slider x:Name="UI_Mood_Volume" HorizontalAlignment="Left" Margin="10,180,0,0" VerticalAlignment="Top" Width="115" Maximum="1" SmallChange="0.01" LargeChange="0.1" Value="1" ValueChanged="Slider_ValueChanged" BorderBrush="{x:Null}" Background="{x:Null}" Grid.Column="1" Height="18"/>
-        <Button x:Name="UI_ButtonInstall" Content="INSTALL" Margin="0,0,10,10" FontSize="10" HorizontalAlignment="Right" Width="49" Height="18" VerticalAlignment="Bottom" Click="UI_ButtonInstall_Click" Background="#FFDDDDDD" BorderBrush="{x:Null}" Grid.Column="1"/>
+        <Button x:Name="UI_ButtonInstall" Panel.ZIndex="100" Content="INSTALL" Margin="0,0,10,10" FontSize="10" HorizontalAlignment="Right" Width="49" Height="18" VerticalAlignment="Bottom" Click="UI_ButtonInstall_Click" Background="#FFDDDDDD" BorderBrush="{x:Null}" Grid.Column="1"/>
         <Button x:Name="UI_ButtonUpdate" Content="UPDATE" Margin="0,0,1,10" Click="UI_ButtonUpdate_Click" BorderBrush="{x:Null}" HorizontalAlignment="Right" Width="68" Height="28" VerticalAlignment="Bottom"/>
         <Button x:Name="UI_ButtonOpenFolder" Content="OPEN" Margin="6,0,74,10" Click="UI_ButtonOpenFolder_Click" BorderBrush="{x:Null}" Height="28" VerticalAlignment="Bottom"/>
         <CheckBox x:Name="UI_Mood_ClickWheel" Content="MOUSE WHEEL" Height="18" VerticalAlignment="Top" HorizontalAlignment="Left" Width="130" Margin="145,159,0,0" MinWidth="100" Checked="UI_Mood_ClickWheel_Checked" Unchecked="UI_Mood_ClickWheel_Checked" Grid.Column="1"/>
         <CheckBox x:Name="UI_SOLO_AUTOLOAD" Content="AUTO LOAD" Height="17" VerticalAlignment="Top" HorizontalAlignment="Left" Width="100" Margin="115,10,0,0" MinWidth="100" Unchecked="UI_SOLO_TRACK_Checked" Checked="UI_SOLO_AUTOLOAD_Checked" Grid.ColumnSpan="2"/>
-        <ListBox Height="130" x:Name="Processes" Margin="265,10,9,0" VerticalAlignment="Top" d:ItemsSource="{d:SampleData ItemCount=5}" Grid.Column="1" SelectionChanged="Processes_SelectionChanged"/>
+        <ListBox x:Name="Processes" Margin="265,10,9,0" d:ItemsSource="{d:SampleData ItemCount=5}" Grid.Column="1" SelectionChanged="Processes_SelectionChanged" Height="130" VerticalAlignment="Top"/>
         <ListBox Height="106" x:Name="ProcessesIgnored" Margin="265,145,9,0" VerticalAlignment="Top" d:ItemsSource="{d:SampleData ItemCount=5}" Grid.Column="1" SelectionChanged="ProcessesIgnored_SelectionChanged"/>
 
     </Grid>
